# SOBitcoin_ChainLens

./: .gitignore  Cargo.toml  LICENSE  README.md  chainlens_web_usage.md  cli.sh  demo.md  sample_fixture.json  setup.sh  stderr.txt  stdout.json  web.sh
src/: ALL_FILES.txt  lib.rs  magic.sh
src/btc/: block.rs  mod.rs  tx.rs
src/btc/block/: io.rs  mod.rs  parser.rs  report.rs  undo.rs
src/btc/tx/: core.rs  mod.rs  report.rs  script.rs  util.rs
src/btc/web/static/: index.html
