[package]
name = "chainlens"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server stack
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["trace"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
k256 = "0.13"

[features]
framing_fuzz = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[[bin]]
name = "chainlens_cli"
path = "src/bin/chainlens_cli.rs"

[[bin]]
name = "chainlens_web"
path = "src/bin/chainlens_web.rs"
